2.1.0 for FabricMC 1.21.10
fix: sell rare item on NPC sell menu
fix: better dungeon teammate nametag according to 1.21.5
fix: when chroma is selected the outline color is still white

TODO(162): fishing particle